--- a/docker-compose.dokploy.yml
+++ b/docker-compose.dokploy.yml
@@ -46,8 +46,8 @@ services:
       - clawdbot-workspace:/home/node/clawd
       - clawdbot-fonts:/usr/share/fonts  # Preserve fonts across deployments
       # Persistent volumes for binaries and shell configuration
-      - /data/clawdbot/binaries:/usr/local/bin
-      - /data/clawdbot/shell:/root/.config/shell
+      - clawdbot-binaries:/usr/local/bin
+      - clawdbot-shell:/root/.config/shell
       # Prestart script for binary installation
       - ./prestart.sh:/docker-entrypoint.d/prestart.sh:ro
     ports:
@@ -77,5 +77,11 @@ volumes:
     name: clawdbot-workspace
   clawdbot-fonts:
     name: clawdbot-fonts
+  clawdbot-binaries:
+    name: clawdbot-binaries
+  clawdbot-shell:
+    name: clawdbot-shell
+
+networks:
   dokploy-network:
     external: true
